[tool.poetry]
name = "bitbank-plugin"
version = "0.1.0"
description = ""
authors = ["Kou Matsumoto <develop@kou-matsumoto.jp>"]
readme = "README.md"
packages = [{include = "bitbank_plugin", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
experimental-string-processing = true

[tool.isort]
profile = "black"
