[tool.poetry]
name = "bitbank-plugin"
version = "0.1.0"
description = ""
authors = ["Kou Matsumoto <develop@kou-matsumoto.jp>"]
readme = "README.md"
packages = [{include = "bitbank_plugin", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pre-commit = "^2.18.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pyright = "^1.1.243"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
experimental-string-processing = true

[tool.isort]
profile = "black"
